--- a/index.html
+++ b/index.html
@@ -5,45 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Real Estate Listings</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-  }
-  nav {
-    background-color: #444;
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
-  }
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-  }
-  .content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
-  }
-  .card {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    width: 300px;
-  }
-  .card img {
-    max-width: 100%;
-    height: auto;
-  }
+  /* ... Your CSS styles ... */
 </style>
 </head>
 <body>
@@ -68,7 +30,7 @@
         title: 'Beautiful Family Home',
         location: '1234 Elm Street',
         price: '$500,000',
-        page: 'listing1.html' // This would be the actual page for the listing
+        page: 'listing1.html'
       },
       {
         image: 'listing2.jpg',
@@ -76,8 +38,65 @@
         location: '5678 Oak Avenue',
         price: '$750,000',
         page: 'listing2.html'
-      }
+      },
       // Add more listings here
+      // ...
+      {
+        image: 'listing3.jpg',
+        title: 'Cozy Cottage',
+        location: '9876 Maple Lane',
+        price: '$350,000',
+        page: 'listing3.html'
+      },
+      {
+        image: 'listing4.jpg',
+        title: 'Modern Townhouse',
+        location: '2468 Pine Street',
+        price: '$600,000',
+        page: 'listing4.html'
+      },
+      {
+        image: 'listing5.jpg',
+        title: 'Spacious Villa',
+        location: '1357 Birch Avenue',
+        price: '$1,200,000',
+        page: 'listing5.html'
+      },
+      {
+        image: 'listing6.jpg',
+        title: 'Riverside Retreat',
+        location: '3141 River Road',
+        price: '$800,000',
+        page: 'listing6.html'
+      },
+      {
+        image: 'listing7.jpg',
+        title: 'Urban Loft',
+        location: '7890 Loft Street',
+        price: '$450,000',
+        page: 'listing7.html'
+      },
+      {
+        image: 'listing8.jpg',
+        title: 'Mountain View Cabin',
+        location: '246 Mountain Drive',
+        price: '$550,000',
+        page: 'listing8.html'
+      },
+      {
+        image: 'listing9.jpg',
+        title: 'Elegant Mansion',
+        location: '111 Grand Avenue',
+        price: '$2,500,000',
+        page: 'listing9.html'
+      },
+      {
+        image: 'listing10.jpg',
+        title: 'Historic Estate',
+        location: '999 Heritage Lane',
+        price: '$3,000,000',
+        page: 'listing10.html'
+      }
     ];
 
     // Dynamically create listing cards
